--- a/Practica02/index.html
+++ b/Practica02/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <head>
-      <h1>Practica 02: uso de box y consumir API</h1>
-    </head>
-    <main>
-      <div class="pokemon-list">
-        <script src="script.js"></script>
-      </div>
-    </main>
+    <h1>Practica 02: uso de box y consumir API</h1>
+    <div id="pokemonList"></div>
+    <script src="script.js"></script>
   </body>
 </html>
