se añadio buscar pokemon

--- a/Practica02/index.html
+++ b/Practica02/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Practica 02: uso de box y consumir API</h1>
+    <center><input type="text" id="searchInput" placeholder="Buscar Pokémon..." /></center>
     <div id="pokemonList"></div>
     <script src="script.js"></script>
   </body>
