practicando distribucion de boxes por pantalla

--- a/practica03/index.html
+++ b/practica03/index.html
@@ -44,13 +44,23 @@
 
     #centro {
       background-color: white;
+      align-content: center;
+      text-align: center;
     }
 
     #derecha {
       background-image: url(./Tallarines_Rojos.png);
     }
+
+
   </style>
   <body>
-    
+    <section id="contenedorPrincipal">
+      <div id="izquierda" class="contenedorSecundario"></div>
+      <div id="centro" class="contenedorSecundario">
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eius nostrum, magnam consectetur libero nihil quam accusamus fuga illum! Quo praesentium, voluptates qui animi quibusdam architecto nesciunt molestias! Cum, porro?</span>
+      </div>
+      <div id="derecha" class="contenedorSecundario"></div>
+    </section>
   </body>
 </html>
