--- a/textAnimation/index.html
+++ b/textAnimation/index.html
@@ -12,7 +12,7 @@
     h1 {
       margin: auto;
       text-align: center;
-      font-size: 300px;
+      font-size: 100px;
       transition: 0.5s;
       color: white;
     }
@@ -23,8 +23,21 @@
         0 10px 0 #0fa, 0 11px 0 #0fa, 0 12px 0 #0fa,
         0 20px 30px rgba(0, 0, 0, 0.5);
     }
+    .container{
+      position: relative;
+    }
+    img{
+      display:  block;
+      height: 100px;
+      display: inline-block;
+      filter: drop-shadow(2px 2px 10px rgba(255, 0, 34, 0.73));
+    }
+
   </style>
   <body>
     <h1>Hola Mundo</h1>
+    <div class="container">
+      <img src="../Practica04/logo.png" alt="">
+    </div>
   </body>
 </html>
