--- a/textAnimation/index.html
+++ b/textAnimation/index.html
@@ -23,21 +23,17 @@
         0 10px 0 #0fa, 0 11px 0 #0fa, 0 12px 0 #0fa,
         0 20px 30px rgba(0, 0, 0, 0.5);
     }
-    .container{
-      position: relative;
-    }
+
     img{
-      display:  block;
       height: 100px;
-      display: inline-block;
-      filter: drop-shadow(2px 2px 10px rgba(255, 0, 34, 0.73));
+      filter: drop-shadow(-1px 9px #4444dd);
     }
 
   </style>
   <body>
     <h1>Hola Mundo</h1>
     <div class="container">
-      <img src="../Practica04/logo.png" alt="">
+      <img src="../proyector3d/git-icon.png" alt="">
     </div>
   </body>
 </html>
