se añadio animaciona las imagenes practica imagenesListHover

--- a/imagenesListHover/index.html
+++ b/imagenesListHover/index.html
@@ -23,7 +23,7 @@
         padding: 10px;
         box-sizing: border-box;
         filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.5)) ;
-        
+        transition: 0.5s;
     }
     .imagenes:hover{
         width: 200%;
