--- a/sombraModal/index.html
+++ b/sombraModal/index.html
@@ -11,19 +11,30 @@
         margin: 0;
     }
     .box{
-        width: 100%;
-        height: 500px;
-        background: linear-gradient(#0009,transparent);
+        width: 300px;
+        height: 400px;
+        border-radius: 7px;
+        margin: auto;
+        #background: linear-gradient(#0009,transparent);
+        margin-top: 20px;
+        #border-top: 6px solid #900;
+        #border-right: 10px solid #900;
+        #border-bottom: 1px solid #900;
+        box-shadow: 0 0 55px 0 #0006;
     }
     h1{
         color: white;
         margin: auto;
         text-align: center;
-        padding: 30px;
+        padding: 2.1em;
+    }
+    img{
+        width: 300px;
     }
 </style>
 <body>
     <div class="box">
+        <img src="https://i.pinimg.com/736x/9b/a9/53/9ba953e48c75cd8d19487c21e380f15a.jpg" alt="">
         <h1>Titulo</h1>
     </div>
 </body>
