--- a/sombraModal/index.html
+++ b/sombraModal/index.html
@@ -15,11 +15,11 @@
         height: 400px;
         border-radius: 7px;
         margin: auto;
-        #background: linear-gradient(#0009,transparent);
+        background: linear-gradient(#0009,transparent);
         margin-top: 20px;
-        #border-top: 6px solid #900;
-        #border-right: 10px solid #900;
-        #border-bottom: 1px solid #900;
+        border-top: 6px solid #900;
+        border-right: 10px solid #900;
+        border-bottom: 1px solid #900;
         box-shadow: 0 0 55px 0 #0006;
     }
     h1{
