correcion de texto de p

--- a/cards/index.html
+++ b/cards/index.html
@@ -67,7 +67,7 @@
         <div class="card">
           <img class="card_img" src="https://pbs.twimg.com/media/FgP5USWXgAE_aCk.jpg" alt="" />
           <h1 class="card_title">Mugiwara</h1>
-          <h2 class="card_subtitle">futuro rey de los piratas</h2>
+          <h2 class="card_subtitle">Futuro rey de los piratas</h2>
           <p class="card_content"
             >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
             doloremque illum minus voluptatibus beatae, accusantium libero quia!
@@ -82,7 +82,7 @@
         <div class="card red_card">
             <img class="card_img" src="https://pbs.twimg.com/media/FgP5USWXgAE_aCk.jpg" alt="" />
             <h1 class="card_title">Mugiwara</h1>
-            <h2 class="card_subtitle">futuro rey de los piratas</h2>
+            <h2 class="card_subtitle">Futuro rey de los piratas</h2>
             <p class="card_content"
               >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
               doloremque illum minus voluptatibus beatae, accusantium libero quia!
@@ -97,7 +97,7 @@
           <div class="card purple_card">
             <img class="card_img" src="https://pbs.twimg.com/media/FgP5USWXgAE_aCk.jpg" alt="" />
             <h1 class="card_title">Mugiwara</h1>
-            <h2 class="card_subtitle">futuro rey de los piratas</h2>
+            <h2 class="card_subtitle">Futuro rey de los piratas</h2>
             <p class="card_content"
               >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
               doloremque illum minus voluptatibus beatae, accusantium libero quia!
