--- a/formularios/index.html
+++ b/formularios/index.html
@@ -18,8 +18,9 @@
         padding: 20px 0;
         max-width: 500px;
         margin: auto;
-        box-shadow: 0 0 55px #0009;
+        box-shadow: 0 0 55px #fff2;
         margin-top: 50px;
+        border-radius: 8px;
     }
 
     .form_input{
