--- a/proyector3d/index.html
+++ b/proyector3d/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <h1>Proyector 3D</h1>
-  <div class="content-all">
-    <div class="content-skills">
-        <figure><img src="java-icon.png" alt=""></figure>
-        <figure><img src="python-icon.png" alt=""></figure>
-        <figure><img src="swift-icon.png" alt=""></figure>
-        <figure><img src="git-icon.png" alt=""></figure>
-        <figure><img src="github-icon.png" alt=""></figure>
-        <figure><img src="html-icon.png" alt=""></figure>
-        <figure><img src="css-icon.png" alt=""></figure>
-        <figure><img src="javascript-icon.png" alt=""></figure>
+  <div class="cajabase">
+    <div class="caja">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
     </div>
   </div>
   <script src="script.js"></script>
